<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.defv.semana2_daute_java.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:icon="@drawable/ic_more"
        android:title="Mas" >

        <menu>
            <item
                android:id="@+id/tema1"
                android:title="@string/tema1"
                android:icon="@drawable/ic_android"
                />
            <item
                android:id="@+id/tema2"
                android:title="@string/tema2"
                android:icon="@drawable/ic_android"
                />
            <item
                android:id="@+id/tema3"
                android:title="@string/tema3"
                android:icon="@drawable/ic_android"
                />
            <item
                android:id="@+id/tema4"
                android:title="@string/tema4"
                android:icon="@drawable/ic_android"
                />
            <item
                android:id="@+id/tema5"
                android:title="@string/tema5"
                android:icon="@drawable/ic_android"
                />
            <item
                android:id="@+id/tema6"
                android:title="@string/tema6"
                android:icon="@drawable/ic_android"
                />
            <item
                android:id="@+id/tema7"
                android:title="@string/tema7"
                android:icon="@drawable/ic_android"
                />
            <item
                android:id="@+id/tema8"
                android:title="@string/tema8"
                android:icon="@drawable/ic_android"
                />
            <item
                android:id="@+id/tema9"
                android:title="@string/tema9"
                android:icon="@drawable/ic_android"
                />
            <item
                android:id="@+id/tema10"
                android:title="@string/tema10"
                android:icon="@drawable/ic_android"
                />
            <item
                android:id="@+id/tema11"
                android:title="@string/tema11"
                android:icon="@drawable/ic_android"
                />
            <item
                android:id="@+id/agenda"
                android:title="Agenda"
                android:icon="@drawable/ic_contact_phone"
                />
        </menu>

    </item>
</menu>